# kilordle_droid

./: Cargo.toml  README.md  build.rs  pyproject.toml
kilordle_droid/: __init__.py  __main__.py  driver.py  util.py
kilordle_droid/planner/: __init__.py
python/kilordle_droid/: __init__.py  __main__.py  driver.py
python/kilordle_droid/driver/: __init__.py  read_results.js
src/: dict.rs  lib.rs  word.rs
