[package]
name = "kilordle_droid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kilordle_droid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.16"
rayon = "1.5"

[features]
extension_module = ["pyo3/extension-module"]
default = ["extension_module"]

[dev-dependencies]
proptest = "1.0.0"
lazy_static = "1.4.0"

[package.metadata.maturin]
python-source = "python"